# matrix-cache

./: .gitignore  CMakeLists.txt  README.md  build.sh
benchmark/: CMakeLists.txt  main.cpp
include/OAC/: common.hpp
include/OAC/cache/: matrix.hpp  matrix_flat.hpp
include/OAC/utils/: random.hpp
report/: bench.json  benchmark.py
source/: matrix.cpp  random.cpp
standalone/source/: main.cpp
test/: CMakeLists.txt  matrix.cpp
test/source/: main.cpp  matrix.cpp
